--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "eslint-config-next": "13.4.12",
     "mongoose": "^7.4.1",
     "next": "13.4.12",
+    "node-fetch": "^3.3.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-spinners": "^0.13.8"
   }
 }
